--- a/index.html
+++ b/index.html
@@ -1,10 +1,80 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>paps-portfolio</title>
-  </head>
-  <body>
+<html>
+<head>
+<meta charset="utf-8" />
+<title>Paps- Portfolio</title>
 
-  </body>
+  <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+
+  </head>
+
+  <body>
+  	<div id="container">
+
+      <p id="logo"><a href="#"><img src="images/logo.png" alt="Paps logo" /></a></p>
+
+  <ul id="nav">
+  	<li><a href="index.html">Home</a></li>
+  	<li><a href="about.html">About</a></li>
+  	<li><a href="portfolio.html">Portfolio</a></li>
+  	<li><a href="contact.html">Contact</a></li>
+  </ul>
+
+<div id="header">
+	<h1>Hello, I'm Paps.</h1>
+	<h2>I craft websites that are beautiful on both the inside and out.</h2>
+
+	<p class="btn"><a href="portfolio.html">View my portfolio</a></p>
+</div>
+
+<div id="content">
+	<h3>About Paps</h3>
+
+	<p>
+      I earn a living by creating custom logos from scratch,
+      as well as designing and building high quality websites and blogs,
+      but I also enjoy cybersecurity and bug hunting.
+      I pride myself in having the nerdy skills
+      to build top notch creations online,
+      as well as being knowledgeable in the print side of design.
+  </p>
+
+	<h3>My latest work</h3>
+
+	<p>
+    I’m forever creating design work for both myself as personal projects
+    and as a hired gun for
+    clients from around the world. Here’s a few of my most recent works.
+  </p>
+
+  	<div class="portfolio-item">
+  		<a href="#"><img src="images/portfolio-1.jpg" alt="View more info" /></a>
+  		<p class="btn"><a href="#">See more</a></p>
+  	</div>
+
+  	<div class="portfolio-item">
+  		<a href="#"><img src="images/portfolio-2.jpg" alt="View more info" /></a>
+  		<p class="btn"><a href="#">See more</a></p>
+  	</div>
+
+  	<div class="portfolio-item">
+  		<a href="#"><img src="images/portfolio-3.jpg" alt="View more info" /></a>
+  		<p class="btn"><a href="#">See more</a></p>
+  	</div>
+
+  	<div class="portfolio-item">
+  		<a href="#"><img src="images/portfolio-4.jpg" alt="View more info" /></a>
+  		<p class="btn"><a href="#">See more</a></p>
+  	</div>
+
+</div>
+
+  <div id="footer">
+  	<p id="copyright">&copy; Paps</p>
+  	<p id="back-top"><a href="#">Going up?</a></p>
+  </div>
+
+	</div>
+
+</body>
 </html>
